--- a/html/party/party.html
+++ b/html/party/party.html
@@ -37,7 +37,7 @@
 
     <link rel="stylesheet" href="../../assets/css/amazeui.css">
     <link rel="stylesheet" href="../../assets/css/sl.css">
-    <script src="../../assets/js/jquery.min.js"></script>
+    <script src="../../assets/js/jquery.js"></script>
     <script src="../../assets/js/amazeui.js"></script>
     <script src="../../assets/js/myFirst.js"></script>
     <style>
