--- a/html/party/strong-big-input.html
+++ b/html/party/strong-big-input.html
@@ -112,7 +112,13 @@
                     备案
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <input type="text" name="putOnRecord"  placeholder="请输入备案" value="" required>
+                    <!--data
+                            1:必须已    data-   开头
+                            2：如果在 data- 后面有 中划线的话，已中划线分割，将各个字符串拼接，中划线后面的字符串第1个单词大小
+                            如果是中划线，$.data()得到的是
+
+                            -->
+                    <input type="number" name="putOnRecord"  placeholder="请输入备案" value="" data-amui-validator="aaa" data-amui.validator="bbb" data-amui.change = "DDDDD" >
                 </div>
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 am-form-group">
@@ -121,7 +127,7 @@
                     结论
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <input type="text" name="conclusion"  placeholder="请输入结论" value="" required>
+                    <input type="text" name="conclusion"  placeholder="请输入结论" value="" required maxlength="6">
                 </div>
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 am-form-group">
@@ -130,7 +136,7 @@
                     通知对象
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <input type="text" name="informObject"  placeholder="请选择通知对象" value="" class="dict-data" readonly required >
+                    <input type="text" name="informObject"  placeholder="请选择通知对象" value="" class="dict-data" readonly required="required">
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
@@ -281,6 +287,13 @@
 //
 //});
     $(function() {
+//        $('#strongBig').data('key','1');
+            console.log($('[name="putOnRecord"]').data('amui-validator'));
+        console.log($('[name="putOnRecord"]').data('amui.validator'));
+        $('[name="putOnRecord"]').data('amui.validator','cccccc');
+//        var v = AMUI.validator
+//        $('#strongBig').fn.toArray();
+//        $('#strongBig').toArray()
         $('#strongBig').validator({
             onValid: function(validity) {
 //                $(validity.field).closest('.am-form-group').find('.am-alert').hide();
@@ -289,9 +302,9 @@
 
 
             onInValid: function(validity) {
-                console.log(validity);
+//                console.log(validity);
                 var $field = $(validity.field);
-                console.log($field);
+//                console.log($field);
                 var $group = $field.closest('.am-form-group');
 //                var offset = $group.offset();
                 var $alert = $('<div class="my-alert" style="display: block;background-color: black;position:fixed;z-index: 10011;color: white;padding: 0.5rem;-webkit-border-radius: .5rem;-moz-border-radius: .5rem;border-radius: .5rem;"></div>');
@@ -305,8 +318,9 @@
 
 
                 // 使用自定义的提示信息 或 插件内置的提示信息
-                console.log("field:"+$field.attr('name'));
-                var msg = $field.attr('placeholder') || this.getValidationMessage(validity);
+//                console.log("field:"+$field.attr('name'));
+//                var msg = $field.attr('placeholder') || this.getValidationMessage(validity);
+                var msg =this.getValidationMessage(validity);
 
 //                if (!$alert.length) {
 //                    $alert = $('<div class="am-alert am-alert-danger"  id="vld-tooltip" style="position:fixed;z-index: 10010;"></div>').hide().
@@ -316,15 +330,15 @@
 //                if($alert.length) {
 //                    $alert.index(1).remove();
 //                }
-                console.log("msg:"+msg);
-                    $alert.html('').html(msg).css({
+//                console.log("msg:"+msg);
+                    $alert.html(msg).css({
                         left: window.innerWidth/2-$alert.outerWidth()/2,
                         top: window.innerHeight/2-$alert.outerHeight()/2,
                     });
                     setTimeout(function () {
                         $('div.my-alert').css('display','none');
                     },2000)
-            }
+            },
         });
     });
 
