--- a/html/dict-search.html
+++ b/html/dict-search.html
@@ -14,6 +14,15 @@
     <script src="../assets/js/jquery.min.js"></script>
     <link rel="stylesheet" href="../assets/css/sl.css">
     <script src="../assets/js/myFirst.js"></script>
+    <style>
+        input{
+            background-color: #F4F4F4;
+            border: 0px;
+        }
+        button{
+            border: 0px;
+        }
+    </style>
 </head>
 
 <body style="background-color: white;">
